Adding some citations

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -11,6 +11,7 @@
 %\usepackage{mathpazo}
 \usepackage{float}
 \usepackage{todonotes}
+\usepackage{xcite}
 \floatstyle{plaintop}
 \restylefloat{table}
 
@@ -71,6 +72,6 @@
 \include{BackMatter/Conclusions}
 \include{BackMatter/Recomendations}
 \include{BackMatter/Bibliography}
-
+%\bibliography{references}
 
 \end{document}
